ajout de server.js + code js

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1 class="text-white text-center mt-2 ">Vous souhaitez faire un don</h1>
-<app-demo-list></app-demo-list>
+<!-- <app-demo-list></app-demo-list> -->
+<app-stripe-client></app-stripe-client>
 
